# agentic-recommenders

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  ossf.yml  scans.yml
agentic_rec/: agent.py  app.py  cache.py  data.py  data_models.py  dependencies.py  index.py  main.py  ml_1m.py  models.py  params.py  service.py  settings.py
agentic_rec/repositories/: base.py  item_repository.py  user_repository.py
agentic_rec/routers/: health.py  info.py  items.py  recommendations.py  users.py
agentic_rec/services/: item_service.py  recommendation_service.py  user_service.py
agentic_rec/utils/: cache.py
data/ml-1m/: README  items.parquet
docs/: design.md
docs/superpowers/plans/: 00-settings.md  01-lancedb-index.md  02-recommender-agent.md  03-fastapi-service.md  2026-04-28-lancedb-index.md  2026-05-07-arag-request-redesign.md  fastapi-service.md  lancedb-index.md  recommender-agent.md
docs/superpowers/specs/: 2026-04-28-arag-design.md  2026-04-28-lancedb-index-design.md  2026-05-07-arag-request-redesign.md  2026-05-08-fastapi-service.md
tests/: test_agent.py  test_app.py  test_caching.py  test_index.py  test_repositories.py  test_service.py  test_services.py
