[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agentic_rec"
version = "0.1.0"
description = "Transformer Recommender Models in PyTorch with MovieLens"
authors = [
  { name = "YuXuan Tay", email = "5795122+yxtay@users.noreply.github.com" },
]
license = "MIT"
requires-python = ">=3.12,<4"
dependencies = [
  "bentoml~=1.3",
  "datasets~=4.0",
  "lancedb>=0.19,<1.0",
  "loguru>=0.7,<1.0",
  "mlflow-skinny~=3.1",
  "polars[pandas]~=1.40",
  "pydantic-ai~=1.43",
  "pylance~=1.0",
  "sentence-transformers[onnx,train]~=5.4",
  "tensorboard~=2.18",
  "torch~=2.5",
  "pydantic-settings~=2.0",
]

[dependency-groups]
dev = [
  "huggingface-hub[cli]>=0.35",
  "mlflow",
  "pyarrow-stubs>=20.0",
  "pytest~=9.0",
]

[project.scripts]
data = "agentic_rec.data:main"

[tool.uv.sources]
torch = [{ index = "torch-cpu" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
fix = true
src = [".", "src", "tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",       # pydocstyle
  "E501",    # line-too-long
  "S101",    # assert
  "S311",    # suspicious-non-cryptographic-random-usage
  "T201",    # print
  "COM812",  # missing-trailing-comma, conflicts with ruff formatter
  "ERA001",  # commented-out-code
  "ISC001",  # single-line-implicit-string-concatenation, conflicts with ruff formatter
  "PLC0415", # import-outside-top-level
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
